[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/JokesLabel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="InputEventKey" id=4]
shift = true
scancode = 67

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -490.5
margin_right = 490.5
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )
text = "51LV3R GRPGS Helper"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JokesLabel" type="Label" parent="Panel/Label"]
anchor_left = 0.506
anchor_top = 1.0
anchor_right = 0.506
anchor_bottom = 1.004
margin_left = -491.386
margin_top = -14.0
margin_right = 491.614
margin_bottom = 14.548
custom_fonts/font = SubResource( 2 )
text = " Jokes "
align = 2
valign = 1
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -276.5
margin_top = -466.0
margin_right = 276.5
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 553.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "MENU_QUESTION"
align = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 553.0
margin_bottom = 117.0
rect_min_size = Vector2( 100, 50 )
hint_tooltip = "TOOLTIP_CALCULATORS"
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 5 )
text = "CALCULATORS"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
margin_top = 137.0
margin_right = 553.0
margin_bottom = 198.0
hint_tooltip = "TOOLTIP_SHEET_MANAGER"
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
text = "SHEET_MANAGER"

[node name="ButtonDices" type="Button" parent="Panel/VBoxContainer"]
margin_top = 218.0
margin_right = 553.0
margin_bottom = 279.0
hint_tooltip = "TOOLTIP_DICES"
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
text = "DICES"

[node name="ButtonConfigs" type="Button" parent="Panel/VBoxContainer"]
margin_top = 299.0
margin_right = 553.0
margin_bottom = 360.0
hint_tooltip = "TOOLTIP_SETINGS"
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 380.0
margin_right = 553.0
margin_bottom = 441.0
hint_tooltip = "TOOLTIP_EXIT"
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -121.476
margin_top = -30.0
margin_right = -8.47559
custom_fonts/font = SubResource( 2 )
text = "Version: 1.3.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Panel/VBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/ButtonDices" to="." method="_on_ButtonDices_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/ButtonConfigs" to="." method="_on_ButtonConfigs_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_button_down"]
